--- a/style.css
+++ b/style.css
@@ -234,7 +234,6 @@ a:focus {
     margin-left: 0.5em;
     margin-top: -0.1rem;
     vertical-align: middle;
-    content: "\f178";
     border: 0;
     font-family: 'FontAwesome';
 }
@@ -1337,6 +1336,7 @@ body.creative-head .header-section {
     background-color: #ffffff;
     box-shadow: 0 5px 15px 0 rgb(47 46 46 / 57%);
     border-radius: 10px;
+    height: 100%;
 }
 .bgimage{
   
@@ -3083,4 +3083,21 @@ h3 .house::after {
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.5);  /* Black with 50% opacity */
     z-index: 1;
+}
+.loadmore:hover,
+.loadmore:focus,
+.loadmore:active
+{
+    opacity: 1;
+    color: black;
+    background-color: rgb(188, 8, 9);
+}
+
+.submit:hover,
+.submit:focus,
+.submit:active
+{
+    opacity: 1;
+    color: black;
+    background-color: rgb(188, 8, 9);
 }
